--- a/.env.deploy
+++ b/.env.deploy
@@ -4,7 +4,7 @@ DB_NAME=
 DB_PASS=
 DB_USER=
 
-CLIENT_URL=http://192.168.33.110/
+CLIENT_URL=
 
 INTERCOM_APP_ID=""
 MULTISITE_DOMAIN=""
@@ -16,3 +16,6 @@ KOHANA_ENV=""
 
 REDIS_HOST=""
 REDIS_PORT=""
+
+NODE_SERVER=true 
+BACKEND_URL=​http://192.168.33.110 
